home with route implemented

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -3,7 +3,7 @@
         <img src="assets/img/player-soccer.png" alt="" />
     </span>
     <span>
-        <h1>GESTÃO ADB</h1>
+        <h1>GESTOR ADB</h1>
     </span>
     <span>
         <img src="assets/img/goalkeeper-soccer.png" alt="" />
