--- a/src/app/components/template/footer/footer.component.css
+++ b/src/app/components/template/footer/footer.component.css
@@ -2,5 +2,6 @@
     position: fixed;
     bottom: 0;
     justify-content: flex-end;
-    font-size: 0.7rem;
+    font-size: 1rem;
+    height: 5%;
 }
