--- a/src/app/components/template/nav/nav.component.css
+++ b/src/app/components/template/nav/nav.component.css
@@ -1,7 +1,29 @@
-.container{
-    height: 85%;
-}
-
-i {
-    padding-right: 0.6rem;
-}
+.container {
+    height: 95%;
+ }
+ 
+ .sidenav {
+    width: 8rem;
+    color: white;
+    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+ }
+ 
+ img {
+    width: 100%;
+    height: 7rem;
+    margin: .8rem auto 1rem auto;
+ }
+ 
+ .sidenav a {
+    color: white;
+ }
+ 
+ .sidenav i {
+    margin-right: .6rem;
+ }
+ 
+ .menu {
+    margin: 0rem 0 0 0rem;
+    color: white;
+    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+ }
