--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,22 +1,26 @@
-<mat-sidenav-container class="container">
-    <mat-sidenav mode="side" opened class="menu">
-        <mat-nav-list>
-            <a routerlink="" mat-list-item>
+<mat-drawer-container class="container" autosize>
+    <mat-drawer #drawer class="sidenav" mode="side">
+        <img src="assets/img/side-image.svg" alt="Imagem de navegação">
+        <mat-nav-list class="nav-list">
+            <a mat-list-item routerLink="home">
                 <i class="material-icons" >home</i>
                 Home
             </a>
-            <a mat-list-item>
+            <a mat-list-item routerLink="unities" >
                 <i class="material-icons">sort</i>
                 Unities
             </a>
-            <a mat-list-item>
+            <a mat-list-item href="players">
                 <i class="material-icons">star</i>
                 Players
             </a>          
         </mat-nav-list>
-    </mat-sidenav>
+    </mat-drawer>
 
-    <mat-sidenav-content>
-        <router-outlet></router-outlet>        
-    </mat-sidenav-content>
-</mat-sidenav-container>
+    <div class="sidenav-content">
+        <button class="menu mat-elevation-z8" (click)="drawer.toggle()" mat-icon-button>
+           <mat-icon>menu</mat-icon>
+        </button>
+        <router-outlet></router-outlet>
+    </div>
+</mat-drawer-container>
