--- a/src/app/components/views/unity/unity-list/unity-list.component.html
+++ b/src/app/components/views/unity/unity-list/unity-list.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="mat-elevation-z8 content-table">
-        <table class="table" mat-table>
+        <table class="table" mat-table [dataSource]="unities">
 
             <!-- Position Column -->
             <ng-container matColumnDef="id">
@@ -31,7 +31,7 @@
             <!-- Symbol Column -->
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> AÇÕES </th>
-                <td mat-cell *matCellDef="let row"> {{ row.actions }} </td>
+                <td mat-cell *matCellDef="let row">  </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
