stock icons included - showList, new, create e delete unity-list

--- a/src/app/components/template/nav/nav.component.css
+++ b/src/app/components/template/nav/nav.component.css
@@ -25,5 +25,5 @@
  .menu {
     margin: 0rem 0 0 0rem;
     color: white;
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(180deg, rgb(26, 30, 87, 1) 0%, rgb(25, 64, 138) 0%, rgb(38, 162, 187) 100%);
  }
