--- a/src/app/components/views/unity/unity-list/unity-list.component.css
+++ b/src/app/components/views/unity/unity-list/unity-list.component.css
@@ -31,3 +31,26 @@
 .table{
     width: 100%;
 }
+
+.button{
+    margin-bottom: 0.8rem;
+    color: rgb(26, 30, 87);
+}
+
+.edit{
+    color: rgb(204, 202, 100);
+}
+
+.delete{
+    color: rgb(202, 84, 54);
+    margin-left: 0.5rem;
+}
+
+.players{
+    color: rgb(0, 0, 0);
+    margin-left: 0.3rem;
+}
+
+.mat-actions{
+    width: 5rem;
+}
