--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -18,7 +18,7 @@
     </mat-drawer>
 
     <div class="sidenav-content">
-        <button class="menu mat-elevation-z8" (click)="drawer.toggle()" mat-icon-button>
+        <button mat-icon-button color="primary" aria-label="Clique para exibir/ocultar" (click)="drawer.toggle()">
            <mat-icon>menu</mat-icon>
         </button>
         <router-outlet></router-outlet>
