--- a/src/app/components/views/unity/unity-list/unity-list.component.html
+++ b/src/app/components/views/unity/unity-list/unity-list.component.html
@@ -8,9 +8,10 @@
     </div>
 
     <div class="mat-elevation-z8 content-table">
+        <button mat-stroked-button color="primary" class="button">NOVA UNIDADE</button>
         <table class="table" mat-table [dataSource]="unities">
 
-            <!-- Position Column -->
+            <!-- ID Column -->
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> ID </th>
                 <td mat-cell *matCellDef="let row"> {{ row.id }} </td>
@@ -22,16 +23,33 @@
                 <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
             </ng-container>
 
-            <!-- Weight Column -->
+            <!-- Description Column -->
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef> DESCRIÇÃO </th>
                 <td mat-cell *matCellDef="let row"> {{ row.description }} </td>
             </ng-container>
 
-            <!-- Symbol Column -->
+            <!-- Players Column -->
+            <ng-container matColumnDef="players">
+                <th mat-header-cell *matHeaderCellDef> JOGADORES </th>
+                <td mat-cell *matCellDef="let row"> 
+                    <a href="#" class="players">
+                        <i class="material-icons">star</i> 
+                    </a>
+                </td>
+            </ng-container>
+
+            <!-- Actions Column -->
             <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef> AÇÕES </th>
-                <td mat-cell *matCellDef="let row">  </td>
+                <th mat-header-cell *matHeaderCellDef class="mat-actions"> AÇÕES </th>
+                <td mat-cell *matCellDef="let row" > 
+                    <a href="#" class="edit">
+                        <i class="material-icons">edit</i>
+                    </a>
+                    <a href="#" class="delete">
+                        <i class="material-icons">delete</i>
+                    </a>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
