Unity Create form starting - mat-form-field

--- a/src/app/components/views/unity/unity-list/unity-list.component.html
+++ b/src/app/components/views/unity/unity-list/unity-list.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="mat-elevation-z8 content-table">
-        <button mat-stroked-button color="primary" class="button">NOVA UNIDADE</button>
+        <button mat-stroked-button color="primary" class="button" (click)="newUnity()">NOVA UNIDADE</button>
         <table class="table" mat-table [dataSource]="unities">
 
             <!-- ID Column -->
