--- a/src/app/components/views/unity/unity-list/unity-list.component.html
+++ b/src/app/components/views/unity/unity-list/unity-list.component.html
@@ -46,7 +46,7 @@
                     <a href="#" class="edit">
                         <i class="material-icons">edit</i>
                     </a>
-                    <a href="#" class="delete">
+                    <a class="delete" routerLink="delete/{{ row.id }}">
                         <i class="material-icons">delete</i>
                     </a>
                 </td>
