--- a/src/app/components/views/unity/unity-list/unity-list.component.html
+++ b/src/app/components/views/unity/unity-list/unity-list.component.html
@@ -43,7 +43,7 @@
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef class="mat-actions"> AÇÕES </th>
                 <td mat-cell *matCellDef="let row" > 
-                    <a href="#" class="edit">
+                    <a class="edit" routerLink="update/{{ row.id }}">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="delete" routerLink="delete/{{ row.id }}">
