--- a/src/app/components/views/player/player-read-all/player-read-all.component.html
+++ b/src/app/components/views/player/player-read-all/player-read-all.component.html
@@ -43,10 +43,10 @@
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef class="mat-actions"> AÇÕES </th>
                 <td mat-cell *matCellDef="let row" > 
-                    <a class="edit" >
+                    <a class="edit" routerLink="{{ row.id }}/update" >
                         <i class="material-icons">edit</i>
                     </a>
-                    <a class="delete" >
+                    <a class="delete" routerLink="{{ row.id }}/delete">
                         <i class="material-icons">delete</i>
                     </a>
                 </td>
